# lf9-pgg

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  backend.Dockerfile  dev-compose.yml  flake.nix  package.json  pnpm-lock.yaml
bruno/: bruno.json
bruno/environments/: local-dev.bru
bruno/project/: Create Project.bru  Delete Project.bru  Get Projects.bru  Get specific Project.bru  Update Project.bru
bruno/user/: Create user.bru  Get user.bru  Get users.bru  Logout User.bru  Verify User.bru
crates/backend/: Cargo.toml
crates/backend/src/: controller.rs  db.rs  error.rs  lib.rs  main.rs  utils.rs  utoipa.rs
crates/backend/src/controller/: auth.rs  class.rs  feedback.rs  group.rs  project.rs  template.rs  user.rs
crates/backend/src/db/: group.rs  project.rs  user.rs
crates/backend/src/db/entity/: group.rs  local_auth.rs  mod.rs  prelude.rs  project.rs  user.rs  user_group_project.rs
crates/backend/tests/: example_refactored_test.rs  integration_tests.rs
crates/backend/tests/common/: mod.rs  setup.rs  test_helpers.rs
crates/backend/tests/common/db_helpers/: auth_helpers.rs  mod.rs  project_helpers.rs  user_helpers.rs
crates/backend/tests/endpoints/: auth.rs  mod.rs  user.rs
crates/ldap/: Cargo.toml
crates/ldap/src/: ldap.rs  lib.rs  main.rs  user.ldif
crates/migration/: Cargo.toml  erm.drawio
crates/migration/src/: baseline.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
frontend/: package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
paketverfolgungsprogramm/: LF9Netzwerk.pkt
(+9 files in other folders)
