[workspace]
members = ["crates/backend", "crates/migration"]
resolver = "3"

[workspace.package]
name = "peer-group-grading"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
migration = { path = "crates/migration" }

serde = { version = "*", features = ["derive"] }
sea-orm = { version = "1.1.0", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
